<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:ems="10"
        android:hint="@string/hintEtEmail"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewIsbnC"
        app:layout_constraintStart_toEndOf="@+id/textViewIsbnC"
        app:layout_constraintTop_toTopOf="@+id/textViewIsbnC" />

    <TextView
        android:id="@+id/textViewIsbnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/textViewEmail"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogin" />

    <EditText
        android:id="@+id/etContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/hintEtContrasenia"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewContrasenia"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toTopOf="@+id/textViewContrasenia" />

    <TextView
        android:id="@+id/textViewContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/textViewContrasenia"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textViewIsbnC"
        app:layout_constraintStart_toStartOf="@+id/textViewIsbnC"
        app:layout_constraintTop_toBottomOf="@+id/textViewIsbnC" />

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="328dp"
        android:layout_height="143dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogin"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogin"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRecordarme" />

    <TextView
        android:id="@+id/textViewRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewRegistrarse"
        android:textColor="#3F51B5"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <CheckBox
        android:id="@+id/checkBoxRecordarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/checkBoxRecordarme"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogin"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogin"
        app:layout_constraintTop_toBottomOf="@+id/etContrasenia" />

</androidx.constraintlayout.widget.ConstraintLayout>