<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibroActivity">

    <TextView
        android:id="@+id/textViewInformacionL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/textViewInformacion"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewLibroL"
        app:layout_constraintStart_toEndOf="@+id/imageViewLibroL"
        app:layout_constraintTop_toTopOf="@+id/imageViewLibroL" />

    <ImageView
        android:id="@+id/imageViewBannerL"
        android:layout_width="238dp"
        android:layout_height="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageViewLibroL"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewBannerL"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBannerL"
        app:srcCompat="@drawable/microsoftteams_image" />

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/textViewTitulo"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLibroL" />

    <TextView
        android:id="@+id/textViewAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewAutor"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewTitulo"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloLibro" />

    <TextView
        android:id="@+id/textViewIsbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewIsbn"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewAutor"
        app:layout_constraintTop_toBottomOf="@+id/textViewAutorLibro" />

    <TextView
        android:id="@+id/textViewTituloLibro"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:text="@string/textViewTituloEjemplo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTitulo"
        app:layout_constraintStart_toEndOf="@+id/textViewTitulo"
        app:layout_constraintTop_toTopOf="@+id/textViewTitulo" />

    <TextView
        android:id="@+id/textViewAutorLibro"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/textViewAutorEjemplo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAutor"
        app:layout_constraintStart_toStartOf="@+id/textViewTituloLibro"
        app:layout_constraintTop_toTopOf="@+id/textViewAutor" />

    <TextView
        android:id="@+id/textViewIsbnLibro"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/textViewIsbnEjemplo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewIsbn"
        app:layout_constraintStart_toStartOf="@+id/textViewAutorLibro"
        app:layout_constraintTop_toTopOf="@+id/textViewIsbn" />

    <TextView
        android:id="@+id/textViewLocaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Locaciones"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewIsbn"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonFavoritosL" />

    <ImageButton
        android:id="@+id/imageButtonFavoritosL"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIsbn"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLocaciones"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocaciones" />
</androidx.constraintlayout.widget.ConstraintLayout>