<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/btnEliminarF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/textViewAccionesF"
        app:layout_constraintStart_toEndOf="@+id/btnVerF"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        tools:layout_editor_absoluteY="0dp" />

    <ImageButton
        android:id="@+id/btnVerF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminarF"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewIsbnF"
        app:layout_constraintStart_toStartOf="@+id/textViewAccionesF"
        app:srcCompat="@drawable/ic_baseline_visibility_24"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textViewAccionesF"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/textViewAcciones"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewIsbnF"
        app:layout_constraintTop_toTopOf="@+id/btnVerF" />

    <TextView
        android:id="@+id/textViewTituloF"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textViewTitulo"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/textViewAutorF"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAutorF"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/textViewAutor"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTituloF"
        app:layout_constraintEnd_toStartOf="@+id/textViewIsbnF"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewTituloF"
        app:layout_constraintTop_toTopOf="@+id/textViewTituloF"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewIsbnF"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/textViewIsbn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAutorF"
        app:layout_constraintEnd_toStartOf="@+id/textViewAccionesF"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewAutorF"
        app:layout_constraintTop_toTopOf="@+id/textViewAutorF" />

</androidx.constraintlayout.widget.ConstraintLayout>